# cyclonite

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  SubDirectoryList.cmake  conanfile.py  readme.md
cmake/: cycloniteConfig.cmake.in
examples/basic/: CMakeLists.txt  basic.cpp  basic.h
examples/gltf-viewer/: CMakeLists.txt  appConfig.h  controller.cpp  controller.h  gltfViewer.cpp  gltfViewer.h  model.cpp  model.h  view.cpp  view.h  viewer.cpp  viewer.h
examples/gltf-viewer/gltf/: reader.cpp  reader.h
examples/minimal/: CMakeLists.txt  minimal.cpp  minimal.h
src/: animationClip.h  app.h  arena.h  baseRenderTarget.cpp  baseRenderTarget.h  config.h  cyclonite.h  defaultConfigs.h  error.h  event.h  eventReceivable.cpp  eventReceivable.h  frameBufferRenderTarget.cpp  frameBufferRenderTarget.h  frameCommands.cpp  frameCommands.h  geometry.cpp  geometry.h  hash.h  input.cpp  input.h  material.cpp  material.h  options.cpp  options.h  platform.h  rangeBasedMemoryManager.h  rawDataView.h  renderPass.cpp  renderPass.h  renderPassFrameCommands.cpp  renderPassSubmitInfo.cpp  renderTarget.cpp  renderTarget.h  renderTargetBuilder.h  root.cpp  root.h  scene.h  sceneNode.h  surface.cpp  (+11 more)
src/animations/: animation.cpp  animation.h  sampler.cpp  sampler.h
src/animations/internal/: interpolation.h
src/buffers/: allocatedMemory.h  arena.h  bufferView.h  ring.h
src/components/: animation.cpp  animation.h  animationStorage.cpp  animationStorage.h  animator.cpp  animator.h  animatorStorage.cpp  animatorStorage.h  camera.cpp  camera.h  mesh.cpp  mesh.h  meshStorage.h  transform.cpp  transform.h  transformStorage.h
src/compositor/: baseGraphicsNode.cpp  baseGraphicsNode.h  baseLogicNode.cpp  baseLogicNode.h  baseNode.cpp  baseNode.h  config.h  frameCommands.cpp  frameCommands.h  graphicsNode.cpp  graphicsNode.h  graphicsNodeBuilder.cpp  graphicsNodeBuilder.h  graphicsNodeInterface.cpp  graphicsNodeInterface.h  links.cpp  links.h  logicNode.h  logicNodeBuilder.h  logicNodeInterface.cpp  logicNodeInterface.h  node.cpp  node.h  nodeAsset.h  nodeBuilder.cpp  nodeBuilder.h  nodeIdentifier.cpp  nodeIdentifier.h  nodeInterface.cpp  nodeInterface.h  nodeTypeRegister.h  passIterator.cpp  passIterator.h  passType.h  workspace.cpp  workspace.h  workspaceBuilder.cpp
src/compositor/internal/: nodeBuilderInternal.h
src/core/: attributeSemantic.h  bufferView.h  camera.h  geometry.h  primitiveType.h  scene.cpp  scene.h  sceneManager.h  transform.h  typedefs.h  vertexAttribute.h
src/gfx/: common.h  instance.h  resource.cpp  resource.h  resourceBase.cpp  resourceBase.h  resourceConcept.h  resourceId.h  resourceManager.cpp  resourceManager.h  resourceRef.cpp  resourceRef.h  resourceTypeList.h  surface.h
src/gfx/interfaces/: instanceInterface.h  surfaceInterface.h
src/gfx/vulkan/: handle.h  vkInstance.h  vkSurface.h
src/internal/: renderTargetBuilder.h  surfaceUtils.h
src/loaders/glTF/: Loader.cpp  Loader.h  loader.cpp  loader.h
src/loaders/glTF/internal/: base64Decode.cpp  base64Decode.h  getOptional.h  readArray.h  testVersion.h
src/loaders/glTF/tmp/: loader.cpp
src/log/: log.cpp  log.h
src/multithreading/: lockFreeQueue.h  render.cpp  render.h  task.cpp  task.h  taskManager.cpp  taskManager.h  taskPool.cpp  taskPool.h  worker.cpp  worker.h
src/multithreading/internal/: utils.h
src/render/: batch.h  constantBufferManager.cpp  constantBufferManager.h  descriptorType.h  drawCommands.h  material.cpp  material.h  renderPass.cpp  renderPass.h  renderPassFrameCommands.cpp  renderTargetBuilder.h  shaderResource.h  technique.cpp  technique.h
src/resources/: buffer.cpp  buffer.h  bufferView.h  contiguousData.h  geometry.cpp  geometry.h  resource.cpp  resource.h  resourceDependency.h  resourceManager.cpp  resourceManager.h  resourceState.h  staging.cpp  staging.h
src/sdl/: sdlSupport.cpp  sdlSupport.h  sdlWindow.cpp  sdlWindow.h
src/shaders/: default.frag  default.vert  screen.frag  screen.vert  shaderDefinitions.cpp  shaderDefinitions.h
src/systems/: animationSystem.cpp  animationSystem.h  cameraSystem.cpp  cameraSystem.h  meshSystem.cpp  meshSystem.h  renderSystem.cpp  renderSystem.h  transferSystem.cpp  transferSystem.h  transformSystem.cpp  transformSystem.h  uniformSystem.cpp  uniformSystem.h  updateStages.h
src/vulkan/: XlibSurface.cpp  androidSurface.cpp  androidSurface.h  baseCommandBufferSet.h  baseSurface.cpp  baseSurface.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandBufferSet.h  commandPool.cpp  commandPool.h  concepts.h  config.h  descriptorSet.cpp  descriptorSet.h  descriptorSetKey.cpp  descriptorSetKey.h  descriptorSetManager.cpp  descriptorSetManager.h  descriptorType.h  device.cpp  device.h  frameBuffer.cpp  frameBuffer.h  handle.h  image.cpp  image.h  imageView.cpp  imageView.h  instance.cpp  instance.h  memoryManager.cpp  memoryManager.h  memoryPage.cpp  memoryPage.h  pipelineDescriptorSets.cpp  pipelineDescriptorSets.h  platformSurface.h  (+12 more)
src/vulkan/internal/: descriptorSetHelpers.h  deviceCreationFunctions.h  fillBufferCreationInfo.h  fillImageCreationInfo.h  imageHelpers.h
tests/: CMakeLists.txt  resourceManagementTest.cpp  resourceManagementTests.h  taskManagerTest.cpp  taskManagerTest.h
